test_regress/t/t_param_default_presv_bad.out
%Error: t/t_param_default_bad.v:7:26: Parameter requires default value, or use IEEE 1800-2009 or later.
    7 | module m #(parameter int Foo);
      |                          ^~~
%Error: Exiting due to
